--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(philosophers C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(philosophers philo_one/main.c philo_one/utils.c philo_one/philo_one.h)
+add_executable(philosophers philo_two/main.c philo_one/utils.c philo_two/philo_two.h)
