--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(philosophers C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(philosophers philo_three/main.c philo_three/philo_three.h philo_three/utils.c)
+add_executable(philosophers philo_one/main.c philo_one/philo_one.h philo_one/utils.c philo_one/dinner_helper.c)
